compiler/testData/diagnostics/tests/annotations/AnnotationsForClasses.kt
annotation @<!PLATFORM_CLASS_MAPPED_TO_KOTLIN!>java.lang.Deprecated<!> class my
annotation <!PLATFORM_CLASS_MAPPED_TO_KOTLIN!>Deprecated<!> class my1